# qa-chatbot

./: .gitignore  README.md  pyproject.toml  requirements.txt
mavi_companion/: agent.py  main.py
